@@ -1,6 +1,6 @@
 Package: mi
-Version: 0.07-2
-Date: 2009-5-4
+Version: 0.07-3
+Date: 2009-6-10
 Title: Missing Data Imputation and Model Checking
 Author: Andrew Gelman <gelman@stat.columbia.edu>, Jennifer Hill
         <jh1030@columbia.edu>, Masanao Yajima <my2167@columbia.edu>,
@@ -11,6 +11,6 @@ Depends: methods, MASS, nnet, car, arm, lme4, R2WinBUGS, abind
 Description: Missing-data imputation and model checking
 URL: http://www.stat.columbia.edu/~gelman/
 License: GPL (>= 2)
-Packaged: 2009-05-08 20:38:40 UTC; SUYS
+Packaged: 2009-06-10 03:27:09 UTC; SUYS
 Repository: CRAN
-Date/Publication: 2009-05-10 18:54:40
+Date/Publication: 2009-06-10 08:29:41
