@@ -330,7 +330,7 @@ setMethod("mi", signature(object = "data.frame"),
 )
 
 setMethod("mi", signature(object = "mi"), 
-        function (object, info, n.imp = 3, n.iter = 30, R.hat = 1.1,
+        function (object, info, n.iter = 30, R.hat = 1.1,
                   max.minutes = 20, rand.imp.method = "bootstrap", 
                   preprocess = TRUE, run.past.convergence = FALSE,
                   seed = NA, check.coef.convergence = FALSE) 
