@@ -43,7 +43,7 @@
     seed = NA, check.coef.convergence = FALSE, 
     add.noise = noise.control(), post.run = TRUE)
     
-\S4method{mi}{mi}( object, info, n.imp = 3, n.iter = 30, 
+\S4method{mi}{mi}( object, info, n.iter = 30, 
     R.hat = 1.1, max.minutes = 20, rand.imp.method = "bootstrap", 
     preprocess = TRUE, run.past.convergence = FALSE,
     seed = NA, check.coef.convergence = FALSE)
